preventing cut off

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ h4 {
 h5 {
   color: #8b8bae;
   text-align: left; 
-  margin-left: -60px; 
+  margin-left: -50px; 
   width: 100%; 
   font-size: 28px;
 }
